--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.51.1",
+    "axios": "^1.7.2",
     "jotai": "^2.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
