--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "preinstall": "npx only-allow pnpm",
+    "test": "vitest"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.51.1",
@@ -33,6 +35,7 @@
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.5",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "vite": "^5.3.1",
+    "vitest": "^2.0.3"
   }
 }
