--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "tailwindcss": "^3.4.5",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
+    "vite-plugin-pwa": "^0.20.0",
     "vitest": "^2.0.3"
   }
 }
