--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "axios": "^1.7.2",
     "jotai": "^2.9.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
