--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
     "@vitest/coverage-v8": "^2.0.4",
-    "ansi-to-html": "^0.7.2",
+    "ansi_up": "^6.0.2",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -59,7 +59,7 @@
     "tailwindcss": "^3.4.5",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
-    "vitest": "^2.0.3"
+    "vitest": "^2.0.4"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
