fix: 리뷰어 PR 생성한 보인 확인하도록 수정

--- a/.github/workflows/install-build-test.yaml
+++ b/.github/workflows/install-build-test.yaml
@@ -181,8 +181,10 @@ jobs:
           github-token: ${{ env.GITHUB_TOKEN }}
           script: |
             const frontendDevelopers = ['gihwan-dev', 'hijiyun'];
+            
+            const prCreator = context.payload.pull_request.user.login;
 
-            const reviewers = frontendDevelopers.filter((developer) => developer !== context.actor);
+            const reviewers = frontendDevelopers.filter((developer) => developer !== prCreator);
 
             if (reviewers.length > 0) {
               await github.rest.pulls.requestReviewers({
