--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@radix-ui/react-switch": "^1.1.0",
     "@tanstack/react-query": "^5.51.1",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
