fix: 애플 로그인 수정 및 라우트 추가

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 VITE_KAKAO_REST_API_KEY=kakao_rest_api_key
 VITE_KAKAO_REDIRECT_URI=kakao_redirect_uri
 VITE_API_URL=http://example.com/api/v1
+VITE_REDIRECT_URI=redirect_uri_for_production
