--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@lukemorales/query-key-factory": "^1.3.4",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@tanstack/react-query": "^5.51.23",
     "@types/react-slick": "^0.23.13",
     "axios": "^1.7.3",
@@ -74,6 +76,7 @@
     "husky": "^9.1.4",
     "jsdom": "^24.1.1",
     "lint-staged": "^15.2.8",
+    "msw": "^2.3.5",
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "storybook": "^8.2.8",
@@ -89,6 +92,11 @@
     ],
     "*.{md,json}": [
       "prettier --write"
+    ]
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
     ]
   }
 }
