--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "es-toolkit": "^1.15.1",
     "jotai": "^2.9.2",
     "lucide-react": "^0.417.0",
     "react": "^18.3.1",
