--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@tanstack/react-query": "^5.51.23",
+    "@toss/async-boundary": "^1.5.0",
     "@types/react-slick": "^0.23.13",
     "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
