--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jotai": "^2.9.3",
     "lucide-react": "^0.417.0",
     "react": "^18.3.1",
+    "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
