--- a/package.json
+++ b/package.json
@@ -85,10 +85,13 @@
     "msw": "^2.3.5",
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
+    "sharp": "^0.33.5",
     "storybook": "^8.2.9",
+    "svgo": "^3.3.2",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4",
     "vite": "^5.4.1",
+    "vite-plugin-image-optimizer": "^1.1.8",
     "vitest": "^2.0.5"
   },
   "lint-staged": {
