--- a/package.json
+++ b/package.json
@@ -91,6 +91,8 @@
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4",
     "vite": "^5.4.1",
+    "vite-bundle-analyzer": "^0.12.1",
+    "vite-plugin-compression2": "^1.3.0",
     "vite-plugin-image-optimizer": "^1.1.8",
     "vitest": "^2.0.5"
   },
