--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@sentry/vite-plugin": "^2.22.5",
     "@tanstack/react-query": "^5.51.23",
     "@toss/async-boundary": "^1.5.0",
     "axios": "^1.7.4",
