refactor: 이미지 업로드시 압축 로직 추가

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tanstack/react-query": "^5.51.23",
     "@toss/async-boundary": "^1.5.0",
     "axios": "^1.7.4",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.8",
