fix: github actions에 환경변수 추가

--- a/.github/workflows/install-build-test.yaml
+++ b/.github/workflows/install-build-test.yaml
@@ -8,6 +8,7 @@ on:
 env:
   GITHUB_TOKEN: ${{ secrets.DND_11_8_FRONTEND_TOKEN }}
   GITHUB_ACTIONS: true
+  VITE_API_URL: ${{ secrets.VITE_API_URL }}
 
 jobs:
   build:
